update about me & fix icon collapse +

--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,8 @@ header {
     color: var(--secondary-color);
     width: 30px;
     height: 30px;
+    min-width: 30px;
+    min-height: 30px;
     border-radius: 50%;
     font-size: var(--font-size-xl);
     cursor: pointer;
@@ -409,6 +411,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
+    line-height: 1;
+    padding: 0;
 }
 
 .toggle-btn:hover {
